<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_HVFAStorageState" Id="{b98b734f-f795-4210-8193-4c96b5360b9a}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_HVFAStorageState :
STRUCT
	fUpperTemperature 	: REAL;
	fLowerTemperature 	: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>