<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_HVFAStorageSystemDefaultParameters" Id="{a40be08d-6585-45e3-a394-792b56f0a360}">
    <Declaration><![CDATA[TYPE ST_HVFAStorageSystemDefaultParameters :
STRUCT
	aSetPointLimitsTemperature : ARRAY[1..2] OF REAL := [0,100];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>